0.10
 - Add DESCRIPTION section to Element doc.
 - Add check for CSS class in Input, Option and Select.
 - Add check for data in Option.
 - Add default value for boolean values in Input.
 - Add doc for Input.
 - Add tests for Input.
 - Add tests for Select.
 - Add tests for Select constructor errors.
 - Fix boolean value in Option for disabled and selected params.

0.09 2024-01-06T19:35:12+01:00
 - Add check for CSS class.
 - Update to bigger version because issues in $VERSION.

0.01 2024-01-06T18:02:59+01:00
 - First version.