@@ -5,6 +5,7 @@
  - Add default value for boolean values in Input.
  - Add doc for Input.
  - Add tests for Input.
+ - Add tests for Options.
  - Add tests for Select.
  - Add tests for Select constructor errors.
  - Fix boolean value in Option for disabled and selected params.
